@@ -1,5 +1,6 @@
 plugins {
     kotlin("jvm")
+    kotlin("kapt")
     id("com.google.devtools.ksp") version "2.0.20-1.0.24"
 }
 
@@ -7,11 +8,14 @@ dependencies {
     val truffleVersion = "24.2.1"
 
     implementation(kotlin("stdlib-jdk8"))
+    kapt("org.graalvm.truffle:truffle-dsl-processor:${truffleVersion}")
 
-    compileOnly("org.graalvm.truffle:truffle-api:${truffleVersion}")
-    testCompileOnly("org.graalvm.truffle:truffle-api:${truffleVersion}")
+    implementation("org.graalvm.truffle:truffle-api:${truffleVersion}")
+    implementation("org.graalvm.sdk:graal-sdk:${truffleVersion}")
 
     testImplementation(kotlin("test-junit"))
+    testImplementation(project(":language"))
+
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.0")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.0")
 }
@@ -21,8 +25,22 @@ sourceSets {
     test { resources { setSrcDirs(listOf("src/test/resources", "src/test/brj")) } }
 }
 
+java {
+    modularity.inferModulePath = true
+}
+
 kotlin {
     jvmToolchain(24)
+}
+
+tasks.compileJava {
+    options.release.set(22)
+
+    options.compilerArgs.add("--module-path")
+    options.compilerArgs.add(classpath.asPath)
+
+    options.compilerArgs.add("--patch-module")
+    options.compilerArgs.add("bridje.language=${sourceSets["main"].output.asPath}")
 }
 
 tasks.compileTestJava {
@@ -31,12 +49,6 @@ tasks.compileTestJava {
 
 tasks.test {
     useJUnitPlatform()
-
-    jvmArgs(
-        "-Dtruffle.class.path.append=${sourceSets.main.get().runtimeClasspath.asPath}",
-        "--add-exports", "org.graalvm.truffle/com.oracle.truffle.api.source=ALL-UNNAMED",
-        "--add-exports", "org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED"
-    )
 }
 
 tasks.jar {
